test/libsolidity/syntaxTests/iceRegressionTests/identifier_collision_return_declare.sol
contract C {
        function ( uint ) external returns ( a [ ] calldata ) public a = ( 1 / 2 ) ;
}
// ----
// TypeError 5172: (58-59): Name has to refer to a user-defined value type, struct, enum or contract.
